objects/LLC_BI__FSC_Synchronization__e.object
<CustomObject>
    <description>The queue contains instructions that are used to synchronize content between nCino and Financial Services Cloud.</description>
    <fields>
        <fullName>LLC_BI__Action__c</fullName>
        <description>Indicates the action that the synchronization process should perform.</description>
        <label>Action</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Parameters__c</fullName>
        <description>Contains the parameters that will be passed to the synchronization process.</description>
        <label>Parameters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Process__c</fullName>
        <description>Indicates the process that must be used to synchronize data.</description>
        <label>Process</label>
        <length>250</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>FSC Synchronization</label>
    <pluralLabel>FSC Synchronization</pluralLabel>
</CustomObject>